# jmdict-xml-wrapper

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
jmdict/: __init__.py
jmdict/xml/: __init__.py  engine.py  models.py
