[tool.poetry]
name = "jmdict-xml-wrapper"
version = "0.1.0"
description = "Python wrapper for JMDict-XML file."
authors = ["fariz.tumbuan <fariz.tumbuan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
BeautifulSoup4 = "^4.9.3"
lxml = "^4.6.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[tool.dephell.main]    
from = {format = "poetry", path = "pyproject.toml"}    
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
